[Fetch API] Fix keepalive-resource-exhaustion.html with Network Service

Bug: 809119
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_mojo
Change-Id: I1aa568846bf0a71ebb509c5e55ae3fce9163a78e
Reviewed-on: https://chromium-review.googlesource.com/958307
Reviewed-by: John Abd-El-Malek <jam@chromium.org>
Commit-Queue: Yutaka Hirano <yhirano@chromium.org>
Cr-Commit-Position: refs/heads/master@{#542992}
Former-commit-id: f788d92fff964d4da19709ae622d6917404c8519