content/browser/loader/resource_dispatcher_host_impl.h
@@ -825,10 +825,6 @@ class CONTENT_EXPORT ResourceDispatcherHostImpl
   // Task runner for the IO thead.
   scoped_refptr<base::SingleThreadTaskRunner> io_thread_task_runner_;
 
-  static constexpr int kMaxKeepaliveConnections = 256;
-  static constexpr int kMaxKeepaliveConnectionsPerProcess = 20;
-  static constexpr int kMaxKeepaliveConnectionsPerProcessForFetchAPI = 10;
-
   DISALLOW_COPY_AND_ASSIGN(ResourceDispatcherHostImpl);
 };
 
